--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,30 @@ a:active {
   align-items: center;
   padding: 0px 80px;
 }
+@media all and (max-width: 920px) {
+  .header {
+    flex-direction: column;
+    height: 15vh;
+    justify-content: center;
+    min-height: 100px;
+    gap: 5px;
+  }
+}
 .header__logo {
   height: 60px;
 }
+@media all and (max-width: 920px) {
+  .header__logo {
+    height: 50px;
+  }
+}
 .header__nav {
   height: 40px;
+}
+@media all and (max-width: 920px) {
+  .header__nav {
+    height: 30px;
+  }
 }
 .header__nav--list {
   height: 100%;
@@ -55,6 +74,11 @@ a:active {
   font-weight: bold;
   border-radius: 20px;
 }
+@media all and (max-width: 920px) {
+  .header__nav--list a {
+    width: 100px;
+  }
+}
 .header__nav--list a:hover {
   background-color: #a7ede0;
 }
@@ -62,11 +86,24 @@ a:active {
 /* LANDING */
 .landing {
   height: 90vh;
+  min-height: 900px;
   background-color: white;
   display: flex;
   gap: 10px;
   flex-direction: column;
   align-items: center;
+}
+@media all and (max-width: 1500px) {
+  .landing {
+    min-height: 650px;
+    justify-content: center;
+  }
+}
+@media all and (max-width: 920px) {
+  .landing {
+    height: 85vh;
+    min-height: 400px;
+  }
 }
 .landing__title {
   width: 450px;
@@ -76,25 +113,66 @@ a:active {
   color: #2e455d;
   margin-top: 150px;
 }
+@media all and (max-width: 1500px) {
+  .landing__title {
+    margin-top: 70px;
+  }
+}
+@media all and (max-width: 920px) {
+  .landing__title {
+    font-size: 30px;
+    margin-top: 0px;
+    width: 250px;
+  }
+}
 .landing__subtitle {
   width: 700px;
   text-align: center;
   font-size: 30px;
   color: #00d1b2;
 }
+@media all and (max-width: 920px) {
+  .landing__subtitle {
+    width: 300px;
+    font-size: 22px;
+  }
+}
 .landing__img {
   width: 1000px;
   margin-top: 70px;
+}
+@media all and (max-width: 1500px) {
+  .landing__img {
+    width: 800px;
+    margin-top: 20px;
+  }
+}
+@media all and (max-width: 920px) {
+  .landing__img {
+    width: 300px;
+  }
 }
 
 /* ABOUT ME */
 .about {
   height: 100vh;
+  min-height: 1200px;
   background-color: #00d1b2;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media all and (max-width: 1500px) {
+  .about {
+    min-height: 600px;
+  }
+}
+@media all and (max-width: 920px) {
+  .about {
+    height: 100vh;
+    min-height: 650px;
+  }
 }
 .about__title {
   font-size: 40px;
@@ -104,6 +182,21 @@ a:active {
   padding: 80px;
   margin-top: 100px;
 }
+@media all and (max-width: 1500px) {
+  .about__title {
+    margin-top: 15px;
+    padding: 40px;
+    font-size: 30px;
+  }
+}
+@media all and (max-width: 920px) {
+  .about__title {
+    font-size: 25px;
+    width: 300px;
+    line-height: 1.3;
+    padding: 30px;
+  }
+}
 .about__text {
   font-size: 25px;
   width: 1015px;
@@ -112,6 +205,20 @@ a:active {
   padding: 20px 0px;
   color: white;
 }
+@media all and (max-width: 1500px) {
+  .about__text {
+    width: 790px;
+    font-size: 20px;
+    padding: 10px 0px;
+  }
+}
+@media all and (max-width: 920px) {
+  .about__text {
+    font-size: 16px;
+    width: 300px;
+    padding: 5px 0px;
+  }
+}
 .about__media {
   margin-top: 80px;
   display: flex;
@@ -119,6 +226,16 @@ a:active {
   gap: 70px;
   justify-content: center;
   padding: 0px 10px 0px 80px;
+}
+@media all and (max-width: 1500px) {
+  .about__media {
+    margin-top: 30px;
+  }
+}
+@media all and (max-width: 920px) {
+  .about__media {
+    margin-top: 40px;
+  }
 }
 .about__media--fb {
   background-color: #2e455d;
@@ -129,6 +246,14 @@ a:active {
   font-size: 50px;
   text-align: center;
   padding: 8px;
+}
+@media all and (max-width: 1500px) {
+  .about__media--fb {
+    height: 60px;
+    width: 60px;
+    padding: 5px 0px;
+    font-size: 45px;
+  }
 }
 .about__media--fb:hover {
   background-color: white;
@@ -146,6 +271,14 @@ a:active {
   text-align: center;
   padding: 11px 0px;
 }
+@media all and (max-width: 1500px) {
+  .about__media--cv {
+    height: 60px;
+    width: 60px;
+    padding: 8px 0px;
+    font-size: 38px;
+  }
+}
 .about__media--cv:hover {
   background-color: white;
   color: #2e455d;
@@ -157,6 +290,20 @@ a:active {
   display: flex;
   gap: 30px;
   justify-content: center;
+}
+@media all and (max-width: 1300px) {
+  .skills {
+    gap: 15px;
+    height: 550px;
+  }
+}
+@media all and (max-width: 920px) {
+  .skills {
+    flex-direction: column;
+    height: 1800px;
+    gap: 25px;
+    align-items: center;
+  }
 }
 .skills__box {
   height: 850px;
@@ -170,6 +317,28 @@ a:active {
   flex-direction: column;
   align-items: center;
 }
+@media all and (max-width: 1500px) {
+  .skills__box {
+    height: 700px;
+    width: 280px;
+    top: -200px;
+  }
+}
+@media all and (max-width: 1300px) {
+  .skills__box {
+    width: 230px;
+  }
+}
+@media all and (max-width: 920px) {
+  .skills__box {
+    top: 0px;
+    width: 90vw;
+    border-radius: 20px;
+    box-shadow: none;
+    height: fit-content;
+    border: 3px solid #00d1b2;
+  }
+}
 .skills__box--icon {
   height: 100px;
   width: 100px;
@@ -181,11 +350,33 @@ a:active {
   text-align: center;
   padding: 20px 0px;
 }
+@media all and (max-width: 1500px) {
+  .skills__box--icon {
+    height: 80px;
+    width: 80px;
+    font-size: 40px;
+    padding: 17px 0px;
+    margin-top: 30px;
+  }
+}
 .skills__box--title {
   font-size: 30px;
   font-weight: bold;
   color: #2e455d;
   padding: 30px 0px 20px 0px;
+}
+@media all and (max-width: 1500px) {
+  .skills__box--title {
+    font-size: 30px;
+    font-weight: bold;
+    color: #2e455d;
+    padding: 30px 0px 20px 0px;
+  }
+}
+@media all and (max-width: 1300px) {
+  .skills__box--title {
+    font-size: 25px;
+  }
 }
 .skills__box--subtitle {
   font-size: 20px;
@@ -193,11 +384,26 @@ a:active {
   color: #00d1b2;
   padding: 40px 0px 10px 0px;
 }
+@media all and (max-width: 1500px) {
+  .skills__box--subtitle {
+    font-size: 18px;
+  }
+}
 .skills__box--list {
   font-size: 22px;
   color: #2e455d;
   text-align: center;
   line-height: 1.5;
+}
+@media all and (max-width: 1500px) {
+  .skills__box--list {
+    font-size: 18px;
+  }
+}
+@media all and (max-width: 920px) {
+  .skills__box--list {
+    padding-bottom: 30px;
+  }
 }
 .skills__box--list-soft {
   line-height: 2;
@@ -205,49 +411,123 @@ a:active {
 
 .projects {
   height: 100vh;
+  min-height: 1000px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media all and (max-width: 1500px) {
+  .projects {
+    min-height: 750px;
+  }
+}
+@media all and (max-width: 1300px) {
+  .projects {
+    height: fit-content;
+  }
 }
 .projects__title {
   font-size: 50px;
   font-weight: bold;
   color: #00d1b2;
   text-align: center;
-  padding: 50px 0px 20px 0px;
+  padding: 50px 0px;
+}
+@media all and (max-width: 1500px) {
+  .projects__title {
+    font-size: 40px;
+    padding: 30px 0px;
+  }
+}
+@media all and (max-width: 920px) {
+  .projects__title {
+    font-size: 25px;
+    padding: 20px 0px;
+  }
 }
 .projects__subtitle {
   font-size: 25px;
   color: #2e455d;
   text-align: center;
 }
+@media all and (max-width: 1500px) {
+  .projects__subtitle {
+    font-size: 25px;
+  }
+}
+@media all and (max-width: 1300px) {
+  .projects__subtitle {
+    font-size: 22px;
+  }
+}
+@media all and (max-width: 920px) {
+  .projects__subtitle {
+    font-size: 16px;
+    width: 350px;
+    line-height: 1.5;
+  }
+}
 .projects__subtitle--link {
   color: #00d1b2;
 }
 .projects__list {
   width: 1500px;
-  height: 900px;
+  height: 700px;
   display: flex;
   gap: 50px;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 80px;
+}
+@media all and (max-width: 1500px) {
+  .projects__list {
+    width: 90vw;
+    gap: 30px;
+    margin-top: 40px;
+    height: fit-content;
+  }
 }
 .projects__list--item {
   border-radius: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   background-color: #a7ede0;
   height: 250px;
   width: 400px;
 }
+@media all and (max-width: 1500px) {
+  .projects__list--item {
+    height: 250px;
+    width: 370px;
+  }
+}
+@media all and (max-width: 920px) {
+  .projects__list--item {
+    height: 200px;
+    width: 300px;
+  }
+}
 
 .talk {
   height: 100vh;
+  min-height: 1200px;
   font-size: 1000px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+}
+@media all and (max-width: 1500px) {
+  .talk {
+    font-size: 600px;
+    min-height: 750px;
+  }
+}
+@media all and (max-width: 920px) {
+  .talk {
+    font-size: 300px;
+    min-height: 620px;
+  }
 }
 .talk__title {
   font-size: 50px;
@@ -256,11 +536,38 @@ a:active {
   text-align: center;
   padding: 50px 0px 20px 0px;
 }
+@media all and (max-width: 1500px) {
+  .talk__title {
+    font-size: 40px;
+  }
+}
+@media all and (max-width: 920px) {
+  .talk__title {
+    font-size: 25px;
+  }
+}
 .talk__subtitle {
   font-size: 25px;
   color: #2e455d;
   text-align: center;
   padding: 30px;
+}
+@media all and (max-width: 1500px) {
+  .talk__subtitle {
+    padding: 10px;
+  }
+}
+@media all and (max-width: 1300px) {
+  .talk__subtitle {
+    font-size: 22px;
+  }
+}
+@media all and (max-width: 920px) {
+  .talk__subtitle {
+    font-size: 16px;
+    line-height: 1.5;
+    width: 290px;
+  }
 }
 .talk__subtitle--email {
   color: #00d1b2;
@@ -276,6 +583,24 @@ a:active {
   justify-content: center;
   align-items: center;
   gap: 15px;
+}
+@media all and (max-width: 1500px) {
+  .talk__btn {
+    margin-top: 30px;
+  }
+}
+@media all and (max-width: 1300px) {
+  .talk__btn {
+    font-size: 22px;
+    padding: 15px 30px;
+  }
+}
+@media all and (max-width: 920px) {
+  .talk__btn {
+    font-size: 18px;
+    padding: 10px 20px;
+    border: 3px solid #00d1b2;
+  }
 }
 .talk__btn--icon {
   font-size: 30px;
@@ -294,6 +619,46 @@ a:active {
   position: absolute;
   bottom: -200px;
   color: #a7ede0;
+}
+@media all and (max-width: 1500px) {
+  .talk__envelope {
+    bottom: -150px;
+  }
+}
+@media all and (max-width: 920px) {
+  .talk__envelope {
+    bottom: 0px;
+  }
+}
+
+.breaking-bad {
+  background-image: url("./images/breaking-bad.png");
+  background-size: cover;
+}
+
+.star-cards {
+  background-image: url("./images/star-cards.png");
+  background-size: cover;
+}
+
+.leap {
+  background-image: url("./images/leap.png");
+  background-size: cover;
+}
+
+.hangman {
+  background-image: url("./images/hangman.png");
+  background-size: cover;
+}
+
+.rick-morty {
+  background-image: url("./images/rick-morty.png");
+  background-size: cover;
+}
+
+.proxy {
+  background-image: url("./images/proxy.png");
+  background-size: cover;
 }
 
 /*# sourceMappingURL=styles.css.map */
