--- a/styles.scss
+++ b/styles.scss
@@ -34,11 +34,25 @@ $font-text: 'Roboto', sans-serif;
   justify-content: space-between;
   align-items: center;
   padding: 0px 80px;
+  @media all and (max-width: 920px) {
+    flex-direction: column;
+    height: 15vh;
+    justify-content: center;
+    min-height: 100px;
+    gap: 5px;
+  }
   &__logo {
     height: 60px;
+    @media all and (max-width: 920px) {
+      height: 50px;
+    }
   }
   &__nav {
     height: 40px;
+    @media all and (max-width: 920px) {
+      height: 30px;
+    }
+
     &--list {
       height: 100%;
       display: flex;
@@ -57,6 +71,9 @@ $font-text: 'Roboto', sans-serif;
       color: $primary-color;
       font-weight: bold;
       border-radius: 20px;
+      @media all and (max-width: 920px) {
+        width: 100px;
+      }
     }
     &--list a:hover {
       background-color: $primary-color-fade;
@@ -66,11 +83,21 @@ $font-text: 'Roboto', sans-serif;
 /* LANDING */
 .landing {
   height: 90vh;
+  min-height: 900px;
   background-color: $secondary-color;
   display: flex;
   gap: 10px;
   flex-direction: column;
   align-items: center;
+  @media all and (max-width: 1500px) {
+    min-height: 650px;
+    justify-content: center;
+  }
+  @media all and (max-width: 920px) {
+    height: 85vh;
+    min-height: 400px;
+  }
+
   &__title {
     width: 450px;
     text-align: center;
@@ -78,26 +105,54 @@ $font-text: 'Roboto', sans-serif;
     font-weight: bold;
     color: $text-color;
     margin-top: 150px;
+    @media all and (max-width: 1500px) {
+      margin-top: 70px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 30px;
+      margin-top: 0px;
+      width: 250px;
+    }
   }
   &__subtitle {
     width: 700px;
     text-align: center;
     font-size: 30px;
     color: $primary-color;
+    @media all and (max-width: 920px) {
+      width: 300px;
+      font-size: 22px;
+    }
   }
   &__img {
     width: 1000px;
     margin-top: 70px;
+    @media all and (max-width: 1500px) {
+      width: 800px;
+      margin-top: 20px;
+    }
+    @media all and (max-width: 920px) {
+      width: 300px;
+    }
   }
 }
 /* ABOUT ME */
 .about {
   height: 100vh;
+  min-height: 1200px;
   background-color: $primary-color;
   color: $secondary-color;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media all and (max-width: 1500px) {
+    min-height: 600px;
+  }
+  @media all and (max-width: 920px) {
+    height: 100vh;
+    min-height: 650px;
+  }
+
   &__title {
     font-size: 40px;
     font-weight: bold;
@@ -105,6 +160,17 @@ $font-text: 'Roboto', sans-serif;
     text-align: center;
     padding: 80px;
     margin-top: 100px;
+    @media all and (max-width: 1500px) {
+      margin-top: 15px;
+      padding: 40px;
+      font-size: 30px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 25px;
+      width: 300px;
+      line-height: 1.3;
+      padding: 30px;
+    }
   }
   &__text {
     font-size: 25px;
@@ -113,6 +179,16 @@ $font-text: 'Roboto', sans-serif;
     line-height: 1.5;
     padding: 20px 0px;
     color: $secondary-color;
+    @media all and (max-width: 1500px) {
+      width: 790px;
+      font-size: 20px;
+      padding: 10px 0px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 16px;
+      width: 300px;
+      padding: 5px 0px;
+    }
   }
   &__media {
     margin-top: 80px;
@@ -121,6 +197,12 @@ $font-text: 'Roboto', sans-serif;
     gap: 70px;
     justify-content: center;
     padding: 0px 10px 0px 80px;
+    @media all and (max-width: 1500px) {
+      margin-top: 30px;
+    }
+    @media all and (max-width: 920px) {
+      margin-top: 40px;
+    }
 
     &--fb {
       background-color: $text-color;
@@ -131,6 +213,12 @@ $font-text: 'Roboto', sans-serif;
       font-size: 50px;
       text-align: center;
       padding: 8px;
+      @media all and (max-width: 1500px) {
+        height: 60px;
+        width: 60px;
+        padding: 5px 0px;
+        font-size: 45px;
+      }
     }
     &--fb:hover {
       background-color: $secondary-color;
@@ -147,6 +235,12 @@ $font-text: 'Roboto', sans-serif;
       font-weight: bold;
       text-align: center;
       padding: 11px 0px;
+      @media all and (max-width: 1500px) {
+        height: 60px;
+        width: 60px;
+        padding: 8px 0px;
+        font-size: 38px;
+      }
     }
     &--cv:hover {
       background-color: $secondary-color;
@@ -160,6 +254,17 @@ $font-text: 'Roboto', sans-serif;
   display: flex;
   gap: 30px;
   justify-content: center;
+  @media all and (max-width: 1300px) {
+    gap: 15px;
+    height: 550px;
+  }
+  @media all and (max-width: 920px) {
+    flex-direction: column;
+    height: 1800px;
+    gap: 25px;
+    align-items: center;
+  }
+
   &__box {
     height: 850px;
     width: 350px;
@@ -172,6 +277,22 @@ $font-text: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media all and (max-width: 1500px) {
+      height: 700px;
+      width: 280px;
+      top: -200px;
+    }
+    @media all and (max-width: 1300px) {
+      width: 230px;
+    }
+    @media all and (max-width: 920px) {
+      top: 0px;
+      width: 90vw;
+      border-radius: 20px;
+      box-shadow: none;
+      height: fit-content;
+      border: 3px solid $primary-color;
+    }
     &--icon {
       height: 100px;
       width: 100px;
@@ -182,24 +303,49 @@ $font-text: 'Roboto', sans-serif;
       font-size: 50px;
       text-align: center;
       padding: 20px 0px;
+      @media all and (max-width: 1500px) {
+        height: 80px;
+        width: 80px;
+        font-size: 40px;
+        padding: 17px 0px;
+        margin-top: 30px;
+      }
     }
     &--title {
       font-size: 30px;
       font-weight: bold;
       color: $text-color;
       padding: 30px 0px 20px 0px;
+      @media all and (max-width: 1500px) {
+        font-size: 30px;
+        font-weight: bold;
+        color: $text-color;
+        padding: 30px 0px 20px 0px;
+      }
+      @media all and (max-width: 1300px) {
+        font-size: 25px;
+      }
     }
     &--subtitle {
       font-size: 20px;
       font-weight: bold;
       color: $primary-color;
       padding: 40px 0px 10px 0px;
+      @media all and (max-width: 1500px) {
+        font-size: 18px;
+      }
     }
     &--list {
       font-size: 22px;
       color: $text-color;
       text-align: center;
       line-height: 1.5;
+      @media all and (max-width: 1500px) {
+        font-size: 18px;
+      }
+      @media all and (max-width: 920px) {
+        padding-bottom: 30px;
+      }
     }
     &--list-soft {
       line-height: 2;
@@ -208,60 +354,131 @@ $font-text: 'Roboto', sans-serif;
 }
 .projects {
   height: 100vh;
+  min-height: 1000px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media all and (max-width: 1500px) {
+    min-height: 750px;
+  }
+  @media all and (max-width: 1300px) {
+    height: fit-content;
+  }
+
   &__title {
     font-size: 50px;
     font-weight: bold;
     color: $primary-color;
     text-align: center;
-    padding: 50px 0px 20px 0px;
+    padding: 50px 0px;
+    @media all and (max-width: 1500px) {
+      font-size: 40px;
+      padding: 30px 0px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 25px;
+      padding: 20px 0px;
+    }
   }
   &__subtitle {
     font-size: 25px;
     color: $text-color;
     text-align: center;
+    @media all and (max-width: 1500px) {
+      font-size: 25px;
+    }
+    @media all and (max-width: 1300px) {
+      font-size: 22px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 16px;
+      width: 350px;
+      line-height: 1.5;
+    }
     &--link {
       color: $primary-color;
     }
   }
   &__list {
     width: 1500px;
-    height: 900px;
+    height: 700px;
     display: flex;
     gap: 50px;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 80px;
+    @media all and (max-width: 1500px) {
+      width: 90vw;
+      gap: 30px;
+      margin-top: 40px;
+      height: fit-content;
+    }
+
     &--item {
       border-radius: 20px;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+        rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+      // border: 5px solid $primary-color;
       background-color: $primary-color-fade;
       height: 250px;
       width: 400px;
+      @media all and (max-width: 1500px) {
+        height: 250px;
+        width: 370px;
+      }
+      @media all and (max-width: 920px) {
+        height: 200px;
+        width: 300px;
+      }
     }
   }
 }
 .talk {
   height: 100vh;
+  min-height: 1200px;
   font-size: 1000px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  @media all and (max-width: 1500px) {
+    font-size: 600px;
+    min-height: 750px;
+  }
+  @media all and (max-width: 920px) {
+    font-size: 300px;
+    min-height: 620px;
+  }
   &__title {
     font-size: 50px;
     font-weight: bold;
     color: $primary-color;
     text-align: center;
     padding: 50px 0px 20px 0px;
+    @media all and (max-width: 1500px) {
+      font-size: 40px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 25px;
+    }
   }
   &__subtitle {
     font-size: 25px;
     color: $text-color;
     text-align: center;
     padding: 30px;
+    @media all and (max-width: 1500px) {
+      padding: 10px;
+    }
+    @media all and (max-width: 1300px) {
+      font-size: 22px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 16px;
+      line-height: 1.5;
+      width: 290px;
+    }
     &--email {
       color: $primary-color;
     }
@@ -277,6 +494,18 @@ $font-text: 'Roboto', sans-serif;
     justify-content: center;
     align-items: center;
     gap: 15px;
+    @media all and (max-width: 1500px) {
+      margin-top: 30px;
+    }
+    @media all and (max-width: 1300px) {
+      font-size: 22px;
+      padding: 15px 30px;
+    }
+    @media all and (max-width: 920px) {
+      font-size: 18px;
+      padding: 10px 20px;
+      border: 3px solid $primary-color;
+    }
     &--icon {
       font-size: 30px;
       color: $primary-color;
@@ -295,5 +524,35 @@ $font-text: 'Roboto', sans-serif;
     position: absolute;
     bottom: -200px;
     color: $primary-color-fade;
+    @media all and (max-width: 1500px) {
+      bottom: -150px;
+    }
+    @media all and (max-width: 920px) {
+      bottom: 0px;
+    }
   }
+}
+.breaking-bad {
+  background-image: url('./images/breaking-bad.png');
+  background-size: cover;
+}
+.star-cards {
+  background-image: url('./images/star-cards.png');
+  background-size: cover;
+}
+.leap {
+  background-image: url('./images/leap.png');
+  background-size: cover;
+}
+.hangman {
+  background-image: url('./images/hangman.png');
+  background-size: cover;
+}
+.rick-morty {
+  background-image: url('./images/rick-morty.png');
+  background-size: cover;
+}
+.proxy {
+  background-image: url('./images/proxy.png');
+  background-size: cover;
 }
