--- a/styles.scss
+++ b/styles.scss
@@ -107,7 +107,7 @@ body {
     color: $text-color;
     margin-top: 150px;
     @media all and (max-width: 1500px) {
-      margin-top: 70px;
+      margin-top: 20px;
     }
     @media all and (max-width: 920px) {
       font-size: 30px;
@@ -146,6 +146,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
   @media all and (max-width: 1500px) {
     min-height: 600px;
   }
@@ -159,11 +160,11 @@ body {
     font-weight: bold;
     color: $text-color;
     text-align: center;
-    padding: 80px;
-    margin-top: 100px;
+    padding: 30px 0px;
+    margin-top: 80px;
     @media all and (max-width: 1500px) {
       margin-top: 15px;
-      padding: 40px;
+      padding: 20px;
       font-size: 30px;
     }
     @media all and (max-width: 920px) {
@@ -181,7 +182,7 @@ body {
     padding: 20px 0px;
     color: $secondary-color;
     @media all and (max-width: 1500px) {
-      width: 790px;
+      width: 830px;
       font-size: 20px;
       padding: 10px 0px;
     }
