Add new landing page olive oil

--- a/styles.scss
+++ b/styles.scss
@@ -558,7 +558,7 @@ body {
   background-image: url('./images/rick-morty.png');
   background-size: cover;
 }
-.proxy {
-  background-image: url('./images/proxy.png');
+.olive {
+  background-image: url('./images/olive.png');
   background-size: cover;
 }
