--- a/styles.css
+++ b/styles.css
@@ -664,8 +664,8 @@ body {
   background-size: cover;
 }
 
-.proxy {
-  background-image: url('./images/proxy.png');
+.olive {
+  background-image: url('./images/olive.png');
   background-size: cover;
 }
 
