--- a/styles.scss
+++ b/styles.scss
@@ -562,3 +562,7 @@ body {
   background-image: url('./images/olive.png');
   background-size: cover;
 }
+.dino {
+  background-image: url('./images/dino.png');
+  background-size: cover;
+}
